--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8"></meta>
+    <link rel="stylesheet" href="style.css"></link>
+    <title>About Me</title>
+  </head>
+  
+ <body>
+   <div class="container">
+   <h1>About Me</h1>
+   <p>Hi, I'm Haruto. I'm a Web Developer and Programmer. I use Html, Css, and Python</p>
+   </div>
+ 
+ 
+ </body>
+
+
+
+
+</html>
